--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,17 +3,18 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
-jobs: 
-  build: 
+jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Use check-out
+      uses: actions/checkout@v2
     - name: Use Node.js
-      uses: actions/setup-node@v2
+      uses: actions/checkout@v2
       with:
-        node-version: "14.x"   
+        node-version: "14.x"
+
     - name: Install dependencies
       run: npm install
     - name: Run test
       run: npm test
-    
